fix alignment

--- a/src/app/styles/components/TimelineRow.scss
+++ b/src/app/styles/components/TimelineRow.scss
@@ -7,13 +7,13 @@
         flex-direction: column;
         align-items: center;
         flex-shrink: 0;
+        padding-top: 4px; /* align dot with first line of text */
 
         .timeline-dot {
             width: 12px;
             height: 12px;
             border-radius: 50%;
             border: 2px solid;
-            border-color: var(--dynamic-dot-color);
             background-color: var(--mui-palette-background-default);
             margin-top: 4px; /* vertically align with first line of text */
             flex-shrink: 0;
